// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with a specific style if linking 1`] = `
<Sized
  className="BlockDetail BlockDetail-linking"
  onSized={[Function]}
  style={
    Object {
      "left": 10,
      "top": 20,
    }
  }
>
  <Card
    className="BlockDetail-card"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
    onMouseUp={[Function]}
  >
    <CardTitle
      className="BlockDetail-title"
      title={
        <TextField
          hintText="Name"
          inputRef={[Function]}
          onChange={[Function]}
          value="Block"
        />
      }
    />
    <CardActions
      className="BlockDetail-actions"
    >
      <IconButton
        className="BlockDetail-action BlockDetail-addLink"
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        onMouseDown={[Function]}
        tooltip="Add link"
        tooltipPosition="bottom-center"
        touch={false}
      >
        <ActionSettingsEthernet />
      </IconButton>
    </CardActions>
  </Card>
</Sized>
`;

exports[`renders without crashing 1`] = `
<Sized
  className="BlockDetail"
  onSized={[Function]}
  style={
    Object {
      "left": 10,
      "top": 20,
    }
  }
>
  <Card
    className="BlockDetail-card"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
    onMouseUp={[Function]}
  >
    <CardTitle
      className="BlockDetail-title"
      title={
        <TextField
          hintText="Name"
          inputRef={[Function]}
          onChange={[Function]}
          value="Block"
        />
      }
    />
    <CardActions
      className="BlockDetail-actions"
    >
      <IconButton
        className="BlockDetail-action BlockDetail-addLink"
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        onMouseDown={[Function]}
        tooltip="Add link"
        tooltipPosition="bottom-center"
        touch={false}
      >
        <ActionSettingsEthernet />
      </IconButton>
    </CardActions>
  </Card>
</Sized>
`;
